// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardItem /> Matches the Card Item Default snapshot 1`] = `
<article
  className="cardItem undefined"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap undefined"
  >
    <h2
      className="title"
    >
      <a
        className="link"
        href="/"
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
  <figure
    className="image undefined"
  >
    <a
      href="/"
    >
      <img
        alt={null}
        className="img undefined"
        src={null}
        typeof="foaf:Image"
      />
    </a>
  </figure>
  <p
    className="blurb undefined"
  >
    <a
      className="iconLink"
      href="/"
    >
      <svg
        aria-hidden={null}
        aria-labelledby={null}
        className="icon"
        fill="currentcolor"
        height={28}
        version={1.1}
        viewBox="0 0 28 28"
        width={28}
      >
        <path
          d="M9 10h-4v6h4l5 5v-16l-5 5zM20.36 19.36l-1.41-1.41c1.272-1.265 2.059-3.015 2.059-4.95s-0.787-3.685-2.059-4.95l-0-0 1.41-1.41c1.634 1.625 2.645 3.874 2.645 6.36s-1.011 4.735-2.644 6.36l-0 0zM17.54 16.54l-1.42-1.42c0.542-0.543 0.877-1.292 0.877-2.12s-0.335-1.577-0.877-2.12l0 0 1.42-1.42c0.912 0.903 1.477 2.156 1.477 3.54s-0.565 2.637-1.477 3.54l-0 0z"
        />
      </svg>
    </a>
  </p>
</article>
`;

exports[`<CardItem /> Matches the Card Item Large snapshot 1`] = `
<article
  className="cardItem cardItemLg"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap titleWrapLg"
  >
    <h2
      className="undefined"
    >
      <a
        className="link"
        href="/"
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
  <figure
    className="image imageLg"
  >
    <a
      href="/"
    >
      <img
        alt={null}
        className="img imgLg"
        src={null}
        typeof="foaf:Image"
      />
    </a>
  </figure>
  <p
    className="blurb blurbLg"
  >
    <a
      className="iconLink"
      href="/"
    >
      <svg
        aria-hidden={null}
        aria-labelledby={null}
        className="icon"
        fill="currentcolor"
        height={28}
        version={1.1}
        viewBox="0 0 28 28"
        width={28}
      >
        <path
          d="M9 10h-4v6h4l5 5v-16l-5 5zM20.36 19.36l-1.41-1.41c1.272-1.265 2.059-3.015 2.059-4.95s-0.787-3.685-2.059-4.95l-0-0 1.41-1.41c1.634 1.625 2.645 3.874 2.645 6.36s-1.011 4.735-2.644 6.36l-0 0zM17.54 16.54l-1.42-1.42c0.542-0.543 0.877-1.292 0.877-2.12s-0.335-1.577-0.877-2.12l0 0 1.42-1.42c0.912 0.903 1.477 2.156 1.477 3.54s-0.565 2.637-1.477 3.54l-0 0z"
        />
      </svg>
    </a>
  </p>
</article>
`;
